[package]
name = "cwc"
version = "1.1.0"
edition = "2024"
description = "A word counter utility that properly handles CJK and Unicode text"
license = "MIT"
repository = "https://github.com/eli-yip/cwc"
readme = "README.md"

[[bin]]
name = "cwc"
path = "src/main.rs"

[dependencies]
clap = { version = "4.6.1", features = ["derive"] }
unicode-segmentation = "1.13"
